@@ -2877,6 +2877,40 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+#if 0
+  { /* Canon MULTIPASS E500 --- with XML */
+    "PIXMA E500", 3,          /*model, model_id*/
+    INCH(17/2), 1917,       /* max paper width and height */ /* from linux driver v3.60 */
+    10, 10, 9, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_PIXMA_MG2100_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_P|CANON_CAP_T|CANON_CAP_I|CANON_CAP_XML|CANON_CAP_BORDERLESS,0,
+    3,6, /* ESC (l and (P command lengths */
+    control_cmd_PIXMA_MG5300, /*features*/
+    &canon_MULTIPASS_E500_modelist,
+    &canon_MULTIPASS_MX880_paperlist,
+    &canon_MULTIPASS_E500_modeuselist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
+  { /* Canon MULTIPASS E600 --- with XML */
+    "PIXMA E600", 3,          /*model, model_id*/
+    INCH(17/2), 1917,       /* max paper width and height */ /* from linux driver v3.70 */
+    10, 10, 9, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_PIXMA_MG2100_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_P|CANON_CAP_T|CANON_CAP_I|CANON_CAP_XML|CANON_CAP_BORDERLESS,0,
+    3,6, /* ESC (l and (P command lengths */
+    control_cmd_PIXMA_MG5300, /*features*/
+    &canon_MULTIPASS_MX880_modelist,
+    &canon_MULTIPASS_MX880_paperlist,
+    &canon_MULTIPASS_MX880_modeuselist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
+#endif
 };
 
 #endif
