@@ -358,6 +358,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG5300 (EXPERIMENTAL)
        Canon PIXMA MG6200 (EXPERIMENTAL)
        Canon PIXMA MG8200 (EXPERIMENTAL)
+       Canon PIXMA E500   (EXPERIMENTAL)
+       Canon PIXMA E600   (EXPERIMENTAL)
 
      - Epson inkjet printers:
 
